--- a/server/sample.env
+++ b/server/sample.env
@@ -1,2 +1,3 @@
 PORT_NUMBER = "enter your port number"
 CONN_STRING="enter your mongodb url"
+SECRET_KEY = "you can write any string value or anything else"
