--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "emoji-picker-react": "^4.13.2",
+    "lucide-react": "^0.540.0",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-scrollbar": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
