--- a/server/sample.env
+++ b/server/sample.env
@@ -1,3 +1,9 @@
 PORT_NUMBER = "enter your port number"
 CONN_STRING="enter your mongodb url"
 SECRET_KEY = "you can write any string value or anything else"
+
+// cloudinary //
+
+CLOUD_NAME = your cloudinary name
+API_KEY =  your cloudinary API key
+API_SECRET = your cloudinary API secret
